--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,9 +1,9 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/png" href="frontend/public/favicon.png" />
     <title>Prompt2Plugin - Generate Chrome Extensions & AI Workflows</title>
     <meta name="description" content="Transform your ideas into powerful Chrome extensions and AI-driven automation workflows. No coding required." />
     <meta name="author" content="Prompt2Plugin" />
